@@ -1,54 +1,112 @@
 %%BeginResource: procset htmldoc-device 1.8 15
 
+%
 % The following procedures use setpagedevice, which is not supported by
 % Level 1 PostScript interpreters.  For these systems, make setpagedevice
 % a no-op.
+%
+
 languagelevel 1 eq { /setpagedevice {pop} BD } if
 
-% Define several global variables for the various functions, depending
-% on the printer being used...
-/trayOffset
-  product (Xerox DocuPrint N4025 PS3) eq
-  { -1 } { 0 } ifelse
-def
+%
+% trayOffset
+%
+% The trayOffset variable defines a number that is added to the position
+% number specified by the "MEDIA POSITION nnn" page comment.  The tray
+% numbers in the page comment start at 1, so the following code sets
+% the offset to -1 if the printer numbers the tray positions at 0.
+%
+
+/trayOffset 0 def
+product (Xerox DocuPrint N4025 PS3) eq
+  { /trayOffset -1 def } if
+
+%
+% haveMediaColor
+%
+% The haveMediaColor variable defines whether a printer supports the
+% MediaColor attribute in the page device dictionary.
+%
 
 /haveMediaColor
   product (Xerox Document Centre 332/340) eq
+%  product (Insert ModelName string here) eq or
   { true } { false } ifelse
 def
+
+%
+% haveMediaPosition
+%
+% The haveMediaPosition variable defines whether a printer supports
+% the MediaPosition attribute in the page device dictionary.
+%
 
 /haveMediaPosition
   product (Xerox DocuPrint N4025 PS3) eq
-  product (Xerox Document Centre 332/340) eq
-  or
+  product (Xerox Document Centre 332/340) eq or
+%  product (Insert ModelName string here) eq or
   { true } { false } ifelse
 def
+
+%
+% haveMediaType
+%
+% The haveMediaType variable defines whether a printer supports
+% the MediaType attribute in the page device dictionary.
+%
 
 /haveMediaType
   product (Xerox DocuPrint N4025 PS3) eq
-  product (Xerox Document Centre 332/340) eq
-  or
+  product (Xerox Document Centre 332/340) eq or
+%  product (Insert ModelName string here) eq or
   { true } { false } ifelse
 def
+
+%
+% haveDeferredMediaSelection
+%
+% The haveDeferredMediaSelection variable defines whether a printer supports
+% the DeferredMediaSelection attribute in the page device dictionary.
+%
 
 /haveDeferredMediaSelection
   product (Xerox DocuPrint N4025 PS3) eq
+%  product (Insert ModelName string here) eq or
   { true } { false } ifelse
 def
 
+%
+% haveManualFeed
+%
+% The haveManualFeed variable defines whether a printer supports
+% the ManualFeed attribute in the page device dictionary.
+%
+
 /haveManualFeed
   product (Xerox DocuPrint N4025 PS3) eq
+%  product (Insert ModelName string here) eq or
   { false } { true } ifelse
 def
+
+%
+% haveTraySwitch
+%
+% The haveTraySwitch variable defines whether a printer supports
+% the TraySwitch attribute in the page device dictionary.
+%
 
 /haveTraySwitch
   product (Xerox DocuPrint N4025 PS3) eq
+%  product (Insert ModelName string here) eq or
   { false } { true } ifelse
 def
 
+%
 % copies SetCopies -
 %
 % Set the number of copies to print.
+%
+
 /SetCopies {
   % Set the number of copies of each page. For Level 1 printers, use the
   % #copies variable; otherwise, use the NumCopies attribute in the
@@ -62,9 +120,12 @@ def
   pop
 } BD
 
+%
 % duplex tumble SetDuplexMode -
 %
 % Set the duplexing mode; "duplex" and "tumble" are boolean values.
+%
+
 /SetDuplexMode {
   % Build a page device dictionary with the Duplex and Tumble
   % attributes...
@@ -80,9 +141,12 @@ def
   pop pop
 } BD
 
+%
 % string SetMediaColor -
 %
 % Set the media color for the output.
+%
+
 /SetMediaColor {
   haveMediaType {
     haveMediaColor {
@@ -107,9 +171,12 @@ def
   pop
 } BD
 
+%
 % number SetMediaPosition -
 %
 % Set the media position (tray) for the output.
+%
+
 /SetMediaPosition {
   haveMediaPosition {
     % Add any tray position offset to the tray number.
@@ -132,9 +199,12 @@ def
   pop
 } BD
 
+%
 % string SetMediaType -
 %
 % Set the media type for the output.  Use a null string to do auto selection.
+%
+
 /SetMediaType {
   % Build a page device dictionary with the MediaPosition attribute...
   <<
@@ -148,9 +218,12 @@ def
   pop
 } BD
 
+%
 % width height SetPageSize -
 %
 % Set the media size for the output.
+%
+
 /SetPageSize {
   % Put the arguments in an array...
   2 array astore
